feat: implement track, artist, album modules
